# include-data-url

./: Cargo.toml  README.md
crates/jcbhmr-include-data-url-build/: Cargo.toml
crates/jcbhmr-include-data-url-build/src/: lib.rs
crates/jcbhmr-include-data-url-build/tests/: e2e.rs
src/: lib.rs
