[package]
name = "jcbhmr-include-data-url"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
base64 = "0.22.1"
derive_more = { version = "2.1.1", features = ["full"] }
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
