[package]
name = "jcbhmr-include-data-url"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/crates/jcbhmr-include-data-url"
authors = ["Jacob Hummer <jcbhmr@outlook.com> (https://jcbhmr.com)"]
categories = []
description = "🔗 Like include_str!(), but returns a data: URL"
keywords = ["data-url", "embed-image"]
repository = "https://github.com/jcbhmr/include-data-url"
# rust-version = "1.94"


[lib]
proc-macro = true

[dependencies]
base64 = "0.22.1"
derive_more = { version = "2.1.1", features = ["full"] }
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
